[metadata]
name = python_maze_generator
version = 1.0.3
author = Nat Biggs
author_email = nat.biggs@live.com
description = Python PNG Maze Generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nattyboyme3/python-maze
project_urls =
    Bug Tracker = https://github.com/nattyboyme3/python-maze/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = python_maze_generator
python_requires = >=3.6
install_requires =
    colorama>=0.4.4
    Pillow>=8.4.0
    anytree>=2.8.0